correcting youtube iframe on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -57,3 +57,6 @@ bottom: 50px;
 display: block;
 width: 100%;
 }
+.youtubeIframe{
+  max-width: 100%;
+}
